# OnnxOCR-Ray

./: .gitignore  Dockerfile  Dockerfile.microservices  MICROSERVICES_README.md  OCR_SERVICE_MANAGER_API_DOCS.md  Readme.md  TEST_README.md  UPDATE_SUMMARY.md  app-service.py  config.yaml  docker-compose.microservices.yml  ocr_app.yaml  ocr_app_scale.yaml  ocr_onnx.yaml  ocr_service_manager.py  pyproject.toml  ray_service.py  requirements.txt  service_entry_point.py  start_fastapi.py  start_service.sh  start_services.sh  stop_services.sh  test.py  test.sh  test_demo_ocr.py  test_ocr.py  test_ocr_ray.py  test_ocr_service_manager.py  test_service_endpoints.py
microservices/: __init__.py  classification_service.py  common.py  detection_service.py  orchestrator_service.py  recognition_service.py
microservices_ray/: classification_service.py  common.py  detection_service.py  recognition_service.py
onnxocr/: cls_postprocess.py  db_postprocess.py  ocr_images_pdfs.py  onnx_paddleocr.py  operators.py  predict_base.py  predict_cls.py  predict_det.py  predict_rec.py  predict_system.py  rec_postprocess.py  utils.py
