[project]
name = "OnnxOCR-Serial"
version = "0.1.0"
description = "OnnxOCR with serial execution (no Ray dependency)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "imgaug>=0.4.0",
    "lmdb>=1.6.2",
    "onnxruntime-gpu[cuda,cudnn]>=1.22.0",
    "opencv-contrib-python>=4.7.0.72",
    "opencv-python-headless>=4.7.0.72",
    "pyclipper>=1.3.0.post6",
    "requests>=2.32.3",
    "scikit-image>=0.25.2",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F401", "I001", "E501", "F541"]

[dependency-groups]
dev = [
    "datasets>=3.6.0",
    "onnxsim>=0.4.36",
    "onnxslim>=0.1.56",
    "paddle2onnx>=2.0.1",
]
