[project]
name = "onnxocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "imgaug>=0.4.0",
    "lmdb>=1.7.2",
    "numpy>=2.2.6",
    "onnxruntime-gpu>=1.22.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pyclipper>=1.3.0.post6",
    "pymupdf>=1.26.3",
    "requests>=2.32.4",
    "scikit-image>=0.25.2",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
